--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /repository.asdfghgghjdhg.pyproj
 /repository.asdfghgghjdhg.sln
 /create_repository.py
+/data/create_repository.py
+/data/
